--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,23 @@ body {
     text-align: center;
 }
 
+header {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    margin-right: 25px;
+    margin-left: 25px;
+}
  h1 {
 
  }
 
-
+article {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 100px;
+    margin-left: 100px;
+    border: 3px solid gray;
+}
  h3 {
 
  }
@@ -19,7 +31,7 @@ body {
 
  }
  img {
-    max-height: 400px;
+    max-height: 300px;
 }
 
  }
